creusot/tests/should_fail/bug/695.coma

module M_695__inversed_if
  type c
  
  type b
  
  let%span s6950 = "../695.rs" 10 15 10 20
  let%span s6951 = "../695.rs" 8 15 8 19
  let%span s6952 = "../695.rs" 4 0 4 79
  let%span s6953 = "../695.rs" 6 59 6 63
  let%span s6954 = "../695.rs" 6 68 6 74
  let%span s6955 = "../695.rs" 5 0 5 91
  let%span span6 = "../../../../../creusot-contracts/src/std/ops.rs" 122 14 122 133
  let%span span7 = "../../../../../creusot-contracts/src/std/ops.rs" 114 15 114 29
  let%span span8 = "../../../../../creusot-contracts/src/std/ops.rs" 115 15 115 26
  let%span span9 = "../../../../../creusot-contracts/src/std/ops.rs" 116 14 116 28
  let%span span10 = "../../../../../creusot-contracts/src/std/ops.rs" 109 14 109 31
  let%span span11 = "../../../../../creusot-contracts/src/std/ops.rs" 103 15 103 48
  let%span span12 = "../../../../../creusot-contracts/src/std/ops.rs" 104 14 104 35
  let%span span13 = "../../../../../creusot-contracts/src/invariant.rs" 24 8 24 18
  let%span span14 = "../../../../../creusot-contracts/src/std/ops.rs" 144 14 144 101
  let%span span15 = "../../../../../creusot-contracts/src/resolve.rs" 41 20 41 34
  let%span span16 = "../../../../../creusot-contracts/src/std/ops.rs" 138 14 138 100
  let%span span17 = "../../../../../creusot-contracts/src/std/ops.rs" 148 0 172 1
  let%span span18 = "" 0 0 0 0
  let%span span19 = "" 0 0 0 0
  let%span span20 = "" 0 0 0 0
  let%span span21 = "../../../../../creusot-contracts/src/std/ops.rs" 166 27 166 52
  let%span span22 = "" 0 0 0 0
  let%span span23 = "" 0 0 0 0
  let%span span24 = "" 0 0 0 0
  
  use prelude.prelude.Borrow
  
  predicate resolve'0 (_1 : c)
  
  predicate postcondition_mut'0 (self : borrowed c) (_2 : ()) (_3 : bool)
  
  predicate postcondition_once'1 (self : c) (_2 : ()) (_3 : bool)
  
  function fn_mut_once'0 (self : c) (args : ()) (res : bool) : ()
  
  axiom fn_mut_once'0_spec : forall self : c, args : (), res : bool . [%#span6] postcondition_once'1 self args res
  = (exists s : borrowed c . s.current = self /\ postcondition_mut'0 s args res /\ resolve'0 s.final)
  
  predicate unnest'0 (self : c) (_2 : c)
  
  function unnest_trans'0 (self : c) (b : c) (c : c) : ()
  
  axiom unnest_trans'0_spec : forall self : c, b : c, c : c . ([%#span7] unnest'0 self b)
   -> ([%#span8] unnest'0 b c)  -> ([%#span9] unnest'0 self c)
  
  function unnest_refl'0 (self : c) : ()
  
  axiom unnest_refl'0_spec : forall self : c . [%#span10] unnest'0 self self
  
  function postcondition_mut_unnest'0 (self : borrowed c) (args : ()) (res : bool) : ()
  
  axiom postcondition_mut_unnest'0_spec : forall self : borrowed c, args : (), res : bool . ([%#span11] postcondition_mut'0 self args res)
   -> ([%#span12] unnest'0 self.current self.final)
  
  predicate inv'5 (_1 : bool)
  
  axiom inv'5 [@rewrite] : forall x : bool [inv'5 x] . inv'5 x = true
  
  predicate inv'4 (_1 : bool)
  
  axiom inv'4 [@rewrite] : forall x : bool [inv'4 x] . inv'4 x = true
  
  predicate inv'3 (_1 : ())
  
  axiom inv'3 [@rewrite] : forall x : () [inv'3 x] . inv'3 x = true
  
  predicate inv'0 (_1 : c)
  
  predicate invariant'2 (self : c) =
    [%#span13] inv'0 self
  
  predicate inv'2 (_1 : c)
  
  axiom inv'2 [@rewrite] : forall x : c [inv'2 x] . inv'2 x = invariant'2 x
  
  predicate postcondition'0 (self : c) (_2 : ()) (_3 : bool)
  
  function fn_once'0 (self : c) (args : ()) (res : bool) : ()
  
  axiom fn_once'0_spec : forall self : c, args : (), res : bool . [%#span14] postcondition_once'1 self args res
  = (resolve'0 self /\ postcondition'0 self args res)
  
  predicate resolve'2 (self : borrowed c) =
    [%#span15] self.final = self.current
  
  function fn_mut'0 (self : borrowed c) (args : ()) (res : bool) : ()
  
  axiom fn_mut'0_spec : forall self : borrowed c, args : (), res : bool . [%#span16] postcondition_mut'0 self args res
  = (resolve'2 self /\ postcondition'0 self.current args res)
  
  predicate invariant'1 (self : b)
  
  predicate inv'1 (_1 : b)
  
  axiom inv'1 : forall x : b [inv'1 x] . inv'1 x  -> invariant'1 x
  
  predicate invariant'0 (self : c)
  
  axiom inv'0 : forall x : c [inv'0 x] . inv'0 x  -> invariant'0 x
  
  predicate postcondition_once'0 (self : b) (_2 : bool) (_3 : ())
  
  predicate precondition'1 (self : b) (_2 : bool)
  
  predicate precondition'0 (self : c) (_2 : ())
  
  use prelude.prelude.Intrinsic
  
  let rec call_once'0 (self:b) (args:bool) (return'  (ret:()))= {[@expl:precondition] [%#span19] inv'5 args}
    {[@expl:precondition] [%#span18] inv'1 self}
    {[@expl:precondition] [%#span17] precondition'1 self args}
    any
    [ return' (result:())-> {[%#span20] inv'3 result}
      {[%#span17] postcondition_once'0 self args result}
      (! return' {result}) ]
    
  
  let rec call'0 (self:c) (args:()) (return'  (ret:bool))= {[@expl:precondition] [%#span23] inv'3 args}
    {[@expl:precondition] [%#span22] inv'2 self}
    {[@expl:precondition] [%#span21] precondition'0 self args}
    any
    [ return' (result:bool)-> {[%#span24] inv'4 result}
      {[%#span17] postcondition'0 self args result}
      (! return' {result}) ]
    
  
  meta "compute_max_steps" 1000000
  
  let rec inversed_if (cond:c) (branch:b) (return'  (ret:()))= {[%#s6954] inv'1 branch}
    {[%#s6953] inv'0 cond}
    {[%#s6952] precondition'0 cond () /\ (forall b : bool . precondition'1 branch (b))}
    (! bb0
    [ bb0 = bb1
    | bb1 = bb2
    | bb2 = s0 [ s0 = call'0 {cond} {_7} (fun (_ret':bool) ->  [ &_5 <- _ret' ] s1) | s1 = bb3 ] 
    | bb3 = s0
      [ s0 = {[@expl:type invariant] inv'0 cond} s1
      | s1 = -{resolve'0 cond}- s2
      | s2 = any [ br0 -> {_5 = false} (! bb5) | br1 -> {_5} (! bb4) ]  ]
      
    | bb4 = s0
      [ s0 =  [ &_11 <- (([%#s6950] false)) ] s1
      | s1 = call_once'0 {branch} {_11} (fun (_ret':()) ->  [ &_0 <- _ret' ] s2)
      | s2 = bb7 ]
      
    | bb7 = bb8
    | bb5 = s0
      [ s0 =  [ &_9 <- (([%#s6951] true)) ] s1
      | s1 = call_once'0 {branch} {_9} (fun (_ret':()) ->  [ &_0 <- _ret' ] s2)
      | s2 = bb6 ]
      
    | bb6 = bb8
    | bb8 = bb9
    | bb9 = bb10
    | bb10 = return' {_0} ]
    )
    [ & _0 : () = any_l ()
    | & cond : c = cond
    | & branch : b = branch
    | & _5 : bool = any_l ()
    | & _7 : () = any_l ()
    | & _9 : bool = any_l ()
    | & _11 : bool = any_l () ]
    
    [ return' (result:())-> {[@expl:postcondition] [%#s6955] exists b : bool . postcondition'0 cond () b
      /\ postcondition_once'0 branch (not b) ()}
      (! return' {result}) ]
    
end
module M_695__valid__qy123zclosureqy35z1qy125z_Type
  use prelude.prelude.Int8
  
  use prelude.prelude.UInt32
  
  use prelude.prelude.Int
  
  use prelude.prelude.Borrow
  
  type m_695__valid__qy123zclosureqy35z1qy125z  =
    | M_695__valid__qy123zclosureqy35z1qy125z uint32
  
  let rec m_695__valid__qy123zclosureqy35z1qy125z (input:m_695__valid__qy123zclosureqy35z1qy125z) (ret  (n:uint32))= any
    [ good (n:uint32)-> {M_695__valid__qy123zclosureqy35z1qy125z n = input} (! ret {n})
    | bad (n:uint32)-> {M_695__valid__qy123zclosureqy35z1qy125z n <> input} {false} any ]
    
end
module M_695__valid__qy123zclosureqy35z1qy125z
  let%span s6950 = "../695.rs" 18 11 18 15
  let%span s6951 = "../695.rs" 17 25 17 45
  
  use prelude.prelude.Int8
  
  use prelude.prelude.Int
  
  use prelude.prelude.Borrow
  
  use prelude.prelude.UInt32
  
  use M_695__valid__qy123zclosureqy35z1qy125z_Type as Closure'0
  
  function field_0'0 [#"../695.rs" 17 15 17 47] (self : Closure'0.m_695__valid__qy123zclosureqy35z1qy125z) : uint32 =
    let Closure'0.M_695__valid__qy123zclosureqy35z1qy125z a = self in a
  
  use prelude.prelude.Intrinsic
  
  meta "compute_max_steps" 1000000
  
  let rec m_695__valid__qy123zclosureqy35z1qy125z (_1:Closure'0.m_695__valid__qy123zclosureqy35z1qy125z) (return'  (ret:bool))= (! bb0
    [ bb0 = s0
      [ s0 = Closure'0.m_695__valid__qy123zclosureqy35z1qy125z {_1}
          (fun (r'0:uint32) -> UInt32.gt {r'0} {[%#s6950] (7 : uint32)} (fun (_ret':bool) ->  [ &res <- _ret' ] s1))
      | s1 =  [ &_0 <- res ] s2
      | s2 = return' {_0} ]
       ]
    )
    [ & _0 : bool = any_l () | & _1 : Closure'0.m_695__valid__qy123zclosureqy35z1qy125z = _1 | & res : bool = any_l () ]
    
    [ return' (result:bool)-> {[@expl:postcondition] [%#s6951] result = (field_0'0 _1 > (7 : uint32))}
      (! return' {result}) ]
    
end
module M_695__valid__qy123zclosureqy35z2qy125z_Type
  use prelude.prelude.Int16
  
  use prelude.prelude.UInt32
  
  use prelude.prelude.Int
  
  use prelude.prelude.Borrow
  
  type m_695__valid__qy123zclosureqy35z2qy125z  =
    | M_695__valid__qy123zclosureqy35z2qy125z (borrowed uint32)
  
  let rec m_695__valid__qy123zclosureqy35z2qy125z (input:m_695__valid__qy123zclosureqy35z2qy125z) (ret  (r:borrowed uint32))= any
    [ good (r:borrowed uint32)-> {M_695__valid__qy123zclosureqy35z2qy125z r = input} (! ret {r})
    | bad (r:borrowed uint32)-> {M_695__valid__qy123zclosureqy35z2qy125z r <> input} {false} any ]
    
end
module M_695__valid__qy123zclosureqy35z2qy125z
  let%span s6950 = "../695.rs" 20 25 20 26
  let%span s6951 = "../695.rs" 20 36 20 37
  let%span s6952 = "../695.rs" 19 27 19 62
  let%span span3 = "../../../../../creusot-contracts/src/resolve.rs" 41 20 41 34
  
  use prelude.prelude.Int16
  
  use prelude.prelude.Int
  
  use prelude.prelude.UInt32
  
  use prelude.prelude.Borrow
  
  use M_695__valid__qy123zclosureqy35z2qy125z_Type as Closure'0
  
  function field_0'0 [#"../695.rs" 19 17 19 64] (self : Closure'0.m_695__valid__qy123zclosureqy35z2qy125z) : borrowed uint32
    
   =
    let Closure'0.M_695__valid__qy123zclosureqy35z2qy125z a = self in a
  
  predicate unnest'0 [#"../695.rs" 19 17 19 64] (self : Closure'0.m_695__valid__qy123zclosureqy35z2qy125z) (_2 : Closure'0.m_695__valid__qy123zclosureqy35z2qy125z)
    
   =
    (field_0'0 _2).final = (field_0'0 self).final
  
  use prelude.prelude.Intrinsic
  
  predicate resolve'1 (self : borrowed Closure'0.m_695__valid__qy123zclosureqy35z2qy125z) =
    [%#span3] self.final = self.current
  
  predicate resolve'0 (_1 : borrowed Closure'0.m_695__valid__qy123zclosureqy35z2qy125z) =
    resolve'1 _1
  
  meta "compute_max_steps" 1000000
  
  let rec m_695__valid__qy123zclosureqy35z2qy125z (_1:borrowed Closure'0.m_695__valid__qy123zclosureqy35z2qy125z) (b:bool) (return'  (ret:()))= (! bb0
    [ bb0 = any [ br0 -> {b = false} (! bb2) | br1 -> {b} (! bb1) ] 
    | bb1 = s0 [ s0 =  [ &_4 <- [%#s6950] (2 : uint32) ] s1 | s1 = bb3 ] 
    | bb2 = s0 [ s0 =  [ &_4 <- [%#s6951] (1 : uint32) ] s1 | s1 = bb3 ] 
    | bb3 = s0
      [ s0 = Closure'0.m_695__valid__qy123zclosureqy35z2qy125z {_1.current}
          (fun (l'0:borrowed uint32) ->
            
            [ &_1 <- { _1 with current = Closure'0.M_695__valid__qy123zclosureqy35z2qy125z ({ l'0 with current = _4 ; }) ; } ]
            
            s1)
      | s1 = -{resolve'0 _1}- s2
      | s2 = return' {_0} ]
       ]
    )
    [ & _0 : () = any_l ()
    | & _1 : borrowed Closure'0.m_695__valid__qy123zclosureqy35z2qy125z = _1
    | & b : bool = b
    | & _4 : uint32 = any_l () ]
    
    [ return' (result:())-> {[@expl:postcondition] unnest'0 _1.current _1.final}
      {[@expl:postcondition] [%#s6952] b /\ (field_0'0 _1.final).current = (2 : uint32)
      \/ not b /\ (field_0'0 _1.final).current = (1 : uint32)}
      (! return' {result}) ]
    
end
module M_695__valid
  let%span s6950 = "../695.rs" 16 16 16 20
  let%span s6951 = "../695.rs" 22 20 22 25
  let%span s6952 = "../695.rs" 14 10 14 71
  let%span span3 = "../695.rs" 19 27 19 62
  let%span span4 = "../695.rs" 17 25 17 45
  let%span span5 = "../695.rs" 4 0 4 79
  let%span span6 = "../695.rs" 6 59 6 63
  let%span span7 = "../695.rs" 6 68 6 74
  let%span span8 = "../695.rs" 5 0 5 91
  
  use prelude.prelude.UInt32
  
  use prelude.prelude.Borrow
  
  use prelude.prelude.Int16
  
  use M_695__valid__qy123zclosureqy35z2qy125z_Type as Closure'1
  
  predicate inv'1 (_1 : Closure'1.m_695__valid__qy123zclosureqy35z2qy125z)
  
  axiom inv'1 [@rewrite] : forall x : Closure'1.m_695__valid__qy123zclosureqy35z2qy125z [inv'1 x] . inv'1 x = true
  
  use prelude.prelude.Int8
  
  use M_695__valid__qy123zclosureqy35z1qy125z_Type as Closure'0
  
  predicate inv'0 (_1 : Closure'0.m_695__valid__qy123zclosureqy35z1qy125z)
  
  axiom inv'0 [@rewrite] : forall x : Closure'0.m_695__valid__qy123zclosureqy35z1qy125z [inv'0 x] . inv'0 x = true
  
  use prelude.prelude.Intrinsic
  
  use prelude.prelude.Int
  
  function field_0'1 [#"../695.rs" 19 17 19 64] (self : Closure'1.m_695__valid__qy123zclosureqy35z2qy125z) : borrowed uint32
    
   =
    let Closure'1.M_695__valid__qy123zclosureqy35z2qy125z a = self in a
  
  predicate postcondition_once'0 [#"../695.rs" 19 17 19 64] (self : Closure'1.m_695__valid__qy123zclosureqy35z2qy125z) (args : bool) (result : ())
    
   =
    [%#span3] let (b) = args in b /\ (field_0'1 self).final = (2 : uint32)
    \/ not b /\ (field_0'1 self).final = (1 : uint32)
  
  function field_0'0 [#"../695.rs" 17 15 17 47] (self : Closure'0.m_695__valid__qy123zclosureqy35z1qy125z) : uint32 =
    let Closure'0.M_695__valid__qy123zclosureqy35z1qy125z a = self in a
  
  predicate postcondition'0 [#"../695.rs" 17 15 17 47] (self : Closure'0.m_695__valid__qy123zclosureqy35z1qy125z) (_ : ()) (result : bool)
    
   =
    [%#span4] result = (field_0'0 self > (7 : uint32))
  
  predicate precondition'1 [#"../695.rs" 19 17 19 64] (self : Closure'1.m_695__valid__qy123zclosureqy35z2qy125z) (args : bool)
    
   =
    let (b) = args in true
  
  predicate precondition'0 [#"../695.rs" 17 15 17 47] (self : Closure'0.m_695__valid__qy123zclosureqy35z1qy125z) (_ : ())
    
   =
    true
  
  let rec inversed_if'0 (cond:Closure'0.m_695__valid__qy123zclosureqy35z1qy125z) (branch:Closure'1.m_695__valid__qy123zclosureqy35z2qy125z) (return'  (ret:()))= {[@expl:precondition] [%#span7] inv'1 branch}
    {[@expl:precondition] [%#span6] inv'0 cond}
    {[@expl:precondition] [%#span5] precondition'0 cond () /\ (forall b : bool . precondition'1 branch (b))}
    any
    [ return' (result:())-> {[%#span8] exists b : bool . postcondition'0 cond () b
      /\ postcondition_once'0 branch (not b) ()}
      (! return' {result}) ]
    
  
  meta "compute_max_steps" 1000000
  
  let rec valid (n:uint32) (return'  (ret:uint32))= (! bb0
    [ bb0 = s0
      [ s0 =  [ &r <- [%#s6950] (0 : uint32) ] s1
      | s1 =  [ &cond <- Closure'0.M_695__valid__qy123zclosureqy35z1qy125z n ] s2
      | s2 = Borrow.borrow_mut <uint32> {r} (fun (_ret':borrowed uint32) ->  [ &_7 <- _ret' ]  [ &r <- _7.final ] s3)
      | s3 =  [ &branch <- Closure'1.M_695__valid__qy123zclosureqy35z2qy125z _7 ] s4
      | s4 = inversed_if'0 {cond} {branch} (fun (_ret':()) ->  [ &_8 <- _ret' ] s5)
      | s5 = bb1 ]
      
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#s6951] false} s1 | s1 =  [ &_0 <- r ] s2 | s2 = return' {_0} ]  ]
    )
    [ & _0 : uint32 = any_l ()
    | & n : uint32 = n
    | & r : uint32 = any_l ()
    | & cond : Closure'0.m_695__valid__qy123zclosureqy35z1qy125z = any_l ()
    | & branch : Closure'1.m_695__valid__qy123zclosureqy35z2qy125z = any_l ()
    | & _7 : borrowed uint32 = any_l ()
    | & _8 : () = any_l () ]
    
    [ return' (result:uint32)-> {[@expl:postcondition] [%#s6952] n > (7 : uint32) /\ result = (2 : uint32)
      \/ n <= (7 : uint32) /\ result = (1 : uint32)}
      (! return' {result}) ]
    
end
